--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-scikit-learn
-numpy
-pytest
-pandas
-dvc[s3]
-lightgbm  
-pytest
-mlflow
-awscli
+scikit-learn==1.5.2
+numpy==2.1.1
+pandas==2.2.3
+dvc==3.55.2
+pytest==8.3.3
+mlflow==2.16.2
